fix tab bar from shifting

--- a/sass/bars.scss
+++ b/sass/bars.scss
@@ -85,6 +85,8 @@
   width: 100%;
   padding: 0;
   border-top: $border-default;
+  border-bottom: 0;
+  border-collapse: collapse;
   table-layout: fixed;
 
   // Navigational tab
